# flask-easy-oidc

./: .gitignore  Makefile  README.md  cosmic-ray.toml  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
flask_easy_oidc/: __init__.py
flask_oidc_auth/: extension.py
requirements/: build.txt  dev.in  dev.txt  test.txt  tests.txt
tests/: test_flask_oidc.py  test_jwks.json  test_private_key.pem
